Fixed CSS bugs on mobile

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -45,12 +45,11 @@ h2 {
   align-items: center;
 }
 .hero-column h1 {
-  font-size: 45px !important;
+  font-size: 35px !important;
 }
 .hero-column img {
   margin: auto;
   margin-top: -30px;
-
   object-fit: cover;
   object-position: top;
   height: 180px;
@@ -58,10 +57,13 @@ h2 {
   margin-bottom: 40px;
 }
 .hero-column h1 {
-  font-size: 50px;
+  /* font-size: 50px; */
 }
 .hero-column h3 {
   padding: 40px 0px;
+}
+.hero-break {
+  display: none;
 }
 
 @media only screen and (min-width: 768px) {
@@ -77,7 +79,7 @@ h2 {
     height: auto;
   }
   .hero-column h1 {
-    font-size: inherit;
+    font-size: 45px !important;
   }
 }
 /* Features */
@@ -191,7 +193,7 @@ h2 {
 .privacy-container {
   text-align: center;
   background-color: #000;
-  padding: 40px;
+  padding: 25px;
 }
 .privacy-header h2 {
   color: #fff;
@@ -212,7 +214,6 @@ h2 {
 .privacy-lists {
   display: flex;
   flex-direction: column;
-  padding: 20px;
 }
 .privacy-column {
   padding: 30px 0;
